[package]
name = "wifiscanner"
version = "0.5.1"
authors = ["Mark Sta Ana <booyaabooyaabooyaa@gmail.com>"]
description = "List WiFi hotspots in your area"
repository = "https://github.com/booyaa/wifiscanner"
documentation = "https://docs.rs/wifiscanner"
readme = "README.md"
keywords = ["wifi","hotspots","network"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
regex = "1"
serde = { version = "1.0.126", features = ["derive"] }
tokio = {version = "1.7.1", features = ["full"]}
itertools = "0.10.0"
